# server-rs

./: .gitmodules  Cargo.toml  build.rs
.github/: dependabot.yml
.github/workflows/: rust.yml
src/: generated.rs  main.rs  utils.rs
src/utils/: cache.rs  logging.rs  stats.rs  windows.rs
src/utils/sys/: windows.rs
