[package]
name = "server-rs"
version = "0.2.1"
edition = "2024"

[features]
default = [ "stats" ]
logging = ["dep:log", "dep:env_logger", "dep:dotenvy"]
stats = ["logging"]

[dependencies]
axum = "0.8.4"
dotenvy = { version = "0.15.7", optional = true }
env_logger = { version = "0.11.8", optional = true }
flatbuffers = "25.2.10"
log = { version = "0.4.27", optional = true }
scc = "2.4.0"
serde =  { version = "1.0.219", features = ["derive"]}
thiserror = "2.0.15"
tokio = { version = "1.47.1", features = ["fs", "rt-multi-thread"] }
notify-debouncer-full = "0.6.0"
tower-http = { version = "0.6.6", features = ["fs"] }

[dev-dependencies]
tempfile = "3.21.0"
tokio = { version = "1.46.1", features = ["rt", "macros", "test-util"] }
http-body-util = "0.1.0"
tower = { version = "0.5.2", features = ["util"] }
