[package]
name = "server-rs"
version = "0.2.1"
edition = "2024"

[features]
default = [ "stats" ]
logging = ["dep:log", "dep:env_logger", "dep:dotenvy"]
stats = ["logging"]

[dependencies]
axum = "0.8.7"
dotenvy = { version = "0.15.7", optional = true }
env_logger = { version = "0.11.8", optional = true }
flatbuffers = "25.9.23"
log = { version = "0.4.29", optional = true }
serde =  { version = "1.0.228", features = ["derive"]}
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["fs", "rt-multi-thread"] }
notify-debouncer-full = "0.6.0"
tower-http = { version = "0.6.8", features = ["fs"] }
moka = {  version = "0.12.12", features = ["future"] }

[dev-dependencies]
tempfile = "3.23.0"
tokio = { version = "1.48.0", features = ["rt", "macros", "test-util"] }
http-body-util = "0.1.0"
tower = { version = "0.5.2", features = ["util"] }
futures = "0.3"

